entrena pero oculto el output

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -34,6 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "#librerias de rapid\n",
     "import math\n",
     "from ebm.models import RBM\n",
@@ -51,7 +52,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#export\n",
+    "#Librerias de utils\n",
+    "import gc\n",
+    "import torch\n",
+    "from itertools import combinations\n",
+    "from torch import cat, max, min, ones, randn, Tensor, zeros\n",
+    "from torch.nn.functional import linear\n",
+    "from torch.utils.data import DataLoader\n",
+    "from tqdm import tqdm"
+   ]
   },
   {
    "cell_type": "code",
@@ -95,11 +106,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Las clases relevantes de rapid "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "# -----------------------------------------------------------------------------\n",
     "# Models\n",
     "# -----------------------------------------------------------------------------\n",
@@ -182,6 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "class RA_RBM(RBM_pm):\n",
     "\n",
     "    def __init__(self, n_visible=100, n_hidden=50, K=50,\n",
@@ -271,6 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "# -----------------------------------------------------------------------------\n",
     "# Optimizers\n",
     "# -----------------------------------------------------------------------------\n",
@@ -340,6 +361,124 @@
     "        self.xi_update.data += self.learning_rate * deltaxi\n",
     "\n",
     "        return self.xi_update"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aqui empiezan las funciones y la clase de utils para el ejemplo de training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class GradientRBM(torch.nn.Module):\n",
+    "\n",
+    "    def __init__(self, n_visible=10, n_hidden=50, device=None, weights=None):\n",
+    "        '''Restricted Boltzmann machine with spin-like neurons to be trained via\n",
+    "        AutoML in PyTorch.\n",
+    "\n",
+    "        Arguments:\n",
+    "\n",
+    "            :param n_visible: The number nodes in the visible layer\n",
+    "            :type n_visible: int\n",
+    "            :param n_hidden: The number nodes in the hidden layer\n",
+    "            :type n_hidden: int\n",
+    "            :param device: Device where to perform computations. None is CPU.\n",
+    "            :type device: torch.device\n",
+    "            :param W: Optional parameter to specify the weights of the RBM\n",
+    "            :type W: torch.nn.Parameter\n",
+    "        '''\n",
+    "        super(GradientRBM, self).__init__()\n",
+    "\n",
+    "        if device is not None:\n",
+    "            self.device = device\n",
+    "        else:\n",
+    "            self.device = torch.device('cpu')\n",
+    "\n",
+    "        if weights is not None:\n",
+    "            self.weights = torch.nn.Parameter(weights.to(self.device),\n",
+    "                                              requires_grad=True)\n",
+    "        else:\n",
+    "            self.weights = torch.nn.Parameter(Tensor(\n",
+    "                                               0.01 * randn(n_hidden, n_visible)\n",
+    "                                                     ).to(self.device),\n",
+    "                                              requires_grad=True)\n",
+    "    def free_energy(self, v):\n",
+    "        wx_b = linear(v, self.weights)\n",
+    "        a    = max(wx_b, -wx_b)\n",
+    "\n",
+    "        hidden_term = (a + ((-wx_b - a).exp() + (wx_b - a).exp()).log()).sum(1)\n",
+    "        return -hidden_term"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def create_bars_4x4():\n",
+    "    '''Create the 4x4-pixel Bars datasets, with flattened images\n",
+    "\n",
+    "        :returns train_data: torch.Tensor of size (10,16) with training images\n",
+    "        :returns recon_train_data: torch.Tensor of size (10,16) with\n",
+    "                                   partially-erased training images\n",
+    "        :returns test_data: torch.Tensor of size (4,16) with testing images\n",
+    "        :returns recon_test_data: torch.Tensor of size (4,16) with\n",
+    "                                  partially-erased testing images\n",
+    "    '''\n",
+    "    train_1    = Tensor([[1, -1, -1, -1]] * 4).unsqueeze(0).view((-1, 16))\n",
+    "    train_2    = Tensor([[1, 1, -1, -1]] * 4).unsqueeze(0).view((-1, 16))\n",
+    "    train_3    = Tensor([[1, 1, 1, -1]] * 4).unsqueeze(0).view((-1, 16))\n",
+    "    train_4    = Tensor([[1, -1, 1, 1]] * 4).unsqueeze(0).view((-1, 16))\n",
+    "    train_5    = Tensor([[1, 1, -1, 1]] * 4).unsqueeze(0).view((-1, 16))\n",
+    "    train      = [train_1, train_2, train_3, train_4, train_5]\n",
+    "    inv_train  = [-image for image in train]\n",
+    "    train_data = cat(train + inv_train, 0)\n",
+    "\n",
+    "    recon_train_data = train_data.clone()\n",
+    "    recon_train_data[:,4:] = 0\n",
+    "\n",
+    "    test_1    = Tensor([[1, -1, 1, -1]] * 4).unsqueeze(0).view((-1, 16))\n",
+    "    test_2    = Tensor([[1, -1, -1, 1]] * 4).unsqueeze(0).view((-1, 16))\n",
+    "    test      = [test_1, test_2]\n",
+    "    inv_test  = [-image for image in test]\n",
+    "    test_data = cat(test + inv_test, 0)\n",
+    "\n",
+    "    recon_test_data = test_data.clone()\n",
+    "    recon_test_data[:,4:] = 0\n",
+    "\n",
+    "    return [train_data, recon_train_data, test_data, recon_test_data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def logsumexp(tensor):\n",
+    "    '''Computes pointwise log(sum(exp())) for all elements in a torch tensor.\n",
+    "    The way of computing it without under- or overflows is through the\n",
+    "    log-sum-exp trick, namely computing\n",
+    "    log(1+exp(x)) = a + log(exp(-a) + exp(x-a))     with a = max(0, x)\n",
+    "    The function is adapted to be used in GPU if needed.\n",
+    "\n",
+    "    Arguments:\n",
+    "\n",
+    "        :param tensor: torch.Tensor\n",
+    "        :returns: torch.Tensor\n",
+    "    '''\n",
+    "    a = max(zeros(1).to(tensor.device), max(tensor))\n",
+    "    return a + (tensor - a).exp().sum().log()"
    ]
   },
   {
