--- a/index.ipynb
+++ b/index.ipynb
@@ -7,6 +7,26 @@
    "outputs": [],
    "source": [
     "#hide\n",
+    "from rapidd.core import *\n",
+    "import torch\n",
+    "from itertools import product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ebm.models import RBM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from rapidd.core import *"
    ]
   },
@@ -93,6 +113,98 @@
    "source": [
     "say_hello(\"Eloy\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aqui empieza Comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from itertools import product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#------------------------------------------------------------------------------\n",
+    "# Parameter choices\n",
+    "#------------------------------------------------------------------------------\n",
+    "hidd     = 1000        # Number of nodes in the hidden layer\n",
+    "rapid_lr = 0.02        # Learning rate for RAPID\n",
+    "epochs   = 300         # Training epochs\n",
+    "K        = 8           # Number of patterns for RA model\n",
+    "bs_rapid = 3           # Batch size for RAPID\n",
+    "gpu      = False        # Use of GPU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#------------------------------------------------------------------------------\n",
+    "# Data preparation\n",
+    "#------------------------------------------------------------------------------\n",
+    "# =============================================================================\n",
+    "device = torch.device('cuda' if gpu and torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "all_datasets = create_bars_4x4()\n",
+    "for _ in all_datasets:\n",
+    "    dataset = all_datasets.pop(0)\n",
+    "    dataset = dataset.to(device)\n",
+    "    all_datasets.append(dataset)\n",
+    "\n",
+    "train_set, recon_train, test_set, recon_test = all_datasets\n",
+    "\n",
+    "vis = len(train_set[0])\n",
+    "\n",
+    "all_confs = torch.Tensor(list(product([-1, 1], repeat=vis))).to(device)\n",
+    "\n",
+    "\n",
+    "# Construct Models\n",
+    "\n",
+    "opt_ra  = SGD_xi(rapid_lr)\n",
+    "\n",
+    "rbm_ra = RA_RBM(n_visible=vis,\n",
+    "                n_hidden=hidd,\n",
+    "                K=K,\n",
+    "                optimizer=opt_ra,\n",
+    "                device=device\n",
+    "                ).to(device)\n",
+    "\n",
+    "# -----------------------------------------------------------------------------\n",
+    "# Training\n",
+    "# -----------------------------------------------------------------------------\n",
+    "\n",
+    "machines = [rbm_ra]\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    train_loader_rapid = torch.utils.data.DataLoader(train_set,\n",
+    "                                                     batch_size=bs_rapid,\n",
+    "                                                     shuffle=True)\n",
+    "\n",
+    "\n",
+    "    rbm_ra.train(train_loader_rapid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
